working with pafe animation

--- a/app/articles.html
+++ b/app/articles.html
@@ -51,44 +51,203 @@
 </head>
 <body>
 
-	<div class="form_wrapper_pop mfp-hide">
-		<div class="form_pop">
-			<form action="" autocomplete="off" id="form">
+	<div id="main" class="body_wrapper m-scene">
 
-				<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
-				<p>Получи скидку 5% на первый заказ</p>
+		<div class="form_wrapper_pop mfp-hide">
+			<div class="form_pop">
+				<form action="" autocomplete="off" id="form">
 
-				<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
-				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
-				<input type="submit" class="submit_pop" value="Перезвоните мне">
+					<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
+					<p>Получи скидку 5% на первый заказ</p>
 
-			</form>
+					<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
+					<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
+					<input type="submit" class="submit_pop" value="Перезвоните мне">
+
+				</form>
+			</div>
 		</div>
-	</div>
 
-	<div class="body_wrapper">
+		<div class="body_wrapper scene_element scene_element--fadein">
 
-		<div class="head_wrapper_innerpage">
+			<div class="head_wrapper_innerpage">
 
-			<header>
-				<div class="container">
+				<header>
+					<div class="container">
 
-					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-						<a href="index.html" class="logo">
+						<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
+							<a href="index.html" class="logo">
+							</a>
+						</div>
+
+						<!-- mob menu -->
+						<div class="mob_menu_button_wrapper">
+							<a href="#" class="mob_menu_button">Меню</a>
+						</div>
+
+						<a href="#" class="close_icon">
+							<img src="../img/ic_close.svg" alt=""/>
+						</a>
+						<!-- mob menu end -->
+
+						<nav class="head_nav col-sm-4 col-md-3">
+							<a href="index.html">Главная</a>
+							<a href="catalog.html">Каталог</a>
+							<a href="prices.html">Цены</a>
+							<a href="articles.html">Статьи</a>
+							<a href="contacts.html">Контакты</a>
+						</nav>
+
+						<div class="phone_wrapper col-md-3">
+
+							<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+
+							<ul class="phones">
+								<li>(097) 823 32 39</li>
+								<li>(097) 823 32 39</li>
+							</ul>
+
+						</div>
+
+						<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
+
+							<input type="button" href=".form_wrapper_pop" class="btn_cta" value="Заказать консультацию">
+
+						</div>
+
+					</div>
+				</header>
+
+				<div class="head_content_wrapper_h1">
+
+					<h1 class="header_title">Статьи</h1>
+
+				</div>
+			</div>
+
+			<section class="content_articles_wrapper">
+
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+				<a href="article_page.html">
+					<div class="article_wrapper">
+
+							<div class="article_img_wrapper">
+								<img class="article_img" src="../img/articles/article_img@2x.png">
+							</div>
+
+						<div class="article_content_wrapper">
+							<div class="article_content">
+
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+
+							</div>
+						</div>
+		      </div></a>
+
+			</section>
+
+			<footer>
+
+				<div class="foo_top container">
+
+					<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
+						<a href="#" class="logo_black">
 						</a>
 					</div>
 
-					<!-- mob menu -->
-					<div class="mob_menu_button_wrapper">
-						<a href="#" class="mob_menu_button">Меню</a>
-					</div>
-
-					<a href="#" class="close_icon">
-						<img src="../img/ic_close.svg" alt=""/>
-					</a>
-					<!-- mob menu end -->
-
-					<nav class="head_nav col-sm-4 col-md-3">
+					<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
 						<a href="index.html">Главная</a>
 						<a href="catalog.html">Каталог</a>
 						<a href="prices.html">Цены</a>
@@ -96,220 +255,65 @@
 						<a href="contacts.html">Контакты</a>
 					</nav>
 
-					<div class="phone_wrapper col-md-3">
+					<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
 
-						<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+						<div class="social_icons">
 
-						<ul class="phones">
-							<li>(097) 823 32 39</li>
-							<li>(097) 823 32 39</li>
-						</ul>
+							<a href="https://vk.com/">
+								<img src="../img/ic_vk.svg" class="ic_vk">
+							</a>
 
-					</div>
+							<a href="https://facebook.com">
+								<img src="../img/ic_fb.svg" class="ic_fb">
+							</a>
 
-					<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
-
-						<input type="button" href=".form_wrapper_pop" class="btn_cta" value="Заказать консультацию">
+						</div>
 
 					</div>
 
 				</div>
-			</header>
 
-			<div class="head_content_wrapper_h1">
+				<div class="foo_bottom container">
 
-				<h1 class="header_title">Статьи</h1>
+					<div class="rights col-xs-12 col-sm-4 col-md-4">
+						<p>© 2016 Woodoors<br>
+								Все права защищены<br>
+								Создание и поддержка Ilya Zoria Studio</p>
+					</div>
 
-			</div>
+					<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
+
+						<div class="location">
+
+							<img src="../img/ic_location.svg" class="ic_location">
+							<p>
+								Наш адрес:<br>
+								Украина, г.Тараща,<br>
+								ул. Степовая 15a
+							</p>
+
+						</div>
+
+					</div>
+
+					<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
+
+						<div class="bottom_phone">
+
+							<img src="../img/ic_cicle_phone_black.svg">
+							<ul class="phones">
+								<li>(097) 823 32 39</li>
+								<li>(097) 823 32 39</li>
+							</ul>
+
+						</div>
+					</div>
+
+				</div>
+
+			</footer>
+
 		</div>
-
-		<section class="content_articles_wrapper">
-
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-			<a href="article_page.html">
-				<div class="article_wrapper">
-
-						<div class="article_img_wrapper">
-							<img class="article_img" src="../img/articles/article_img@2x.png">
-						</div>
-
-					<div class="article_content_wrapper">
-						<div class="article_content">
-
-							<span class="article_readtime">9 минут для чтения</span>
-							<h3>Как выбрать межкомнатную дверь?</h3>
-							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-
-						</div>
-					</div>
-	      </div></a>
-
-		</section>
-
-		<footer>
-
-			<div class="foo_top container">
-
-				<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
-					<a href="#" class="logo_black">
-					</a>
-				</div>
-
-				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-					<a href="index.html">Главная</a>
-					<a href="catalog.html">Каталог</a>
-					<a href="prices.html">Цены</a>
-					<a href="articles.html">Статьи</a>
-					<a href="contacts.html">Контакты</a>
-				</nav>
-
-				<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
-
-					<div class="social_icons">
-
-						<a href="https://vk.com/">
-							<img src="../img/ic_vk.svg" class="ic_vk">
-						</a>
-
-						<a href="https://facebook.com">
-							<img src="../img/ic_fb.svg" class="ic_fb">
-						</a>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="foo_bottom container">
-
-				<div class="rights col-xs-12 col-sm-4 col-md-4">
-					<p>© 2016 Woodoors<br>
-							Все права защищены<br>
-							Создание и поддержка Ilya Zoria Studio</p>
-				</div>
-
-				<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
-
-					<div class="location">
-
-						<img src="../img/ic_location.svg" class="ic_location">
-						<p>
-							Наш адрес:<br>
-							Украина, г.Тараща,<br>
-							ул. Степовая 15a
-						</p>
-
-					</div>
-
-				</div>
-
-				<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
-
-					<div class="bottom_phone">
-
-						<img src="../img/ic_cicle_phone_black.svg">
-						<ul class="phones">
-							<li>(097) 823 32 39</li>
-							<li>(097) 823 32 39</li>
-						</ul>
-
-					</div>
-				</div>
-
-			</div>
-
-		</footer>
 
 	</div>
 
