--- a/app/product_page.html
+++ b/app/product_page.html
@@ -51,44 +51,198 @@
 </head>
 <body>
 
-	<div class="form_wrapper_pop mfp-hide">
-		<div class="form_pop">
-			<form action="" autocomplete="off" id="form">
+	<div id="main" class="body_wrapper m-scene">
 
-				<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
-				<p>Получи скидку 5% на первый заказ</p>
+		<div class="form_wrapper_pop mfp-hide">
+			<div class="form_pop">
+				<form action="" autocomplete="off" id="form">
 
-				<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
-				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
-				<input type="submit" class="submit_pop" value="Перезвоните мне">
+					<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
+					<p>Получи скидку 5% на первый заказ</p>
 
-			</form>
+					<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
+					<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
+					<input type="submit" class="submit_pop" value="Перезвоните мне">
+
+				</form>
+			</div>
 		</div>
-	</div>
 
-	<div class="body_wrapper">
+		<div class="body_wrapper scene_element scene_element--fadein">
 
-		<div class="head_wrapper_pp">
+			<div class="head_wrapper_pp">
 
-			<header>
-				<div class="container">
+				<header>
+					<div class="container">
 
-					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-						<a href="index.html" class="logo">
+						<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
+							<a href="index.html" class="logo">
+							</a>
+						</div>
+
+						<!-- mob menu -->
+						<div class="mob_menu_button_wrapper">
+							<a href="#" class="mob_menu_button">Меню</a>
+						</div>
+
+						<a href="#" class="close_icon">
+							<img src="../img/ic_close.svg" alt=""/>
+						</a>
+						<!-- mob menu end -->
+
+						<nav class="head_nav col-sm-4 col-md-3">
+							<a href="index.html">Главная</a>
+							<a href="catalog.html">Каталог</a>
+							<a href="prices.html">Цены</a>
+							<a href="articles.html">Статьи</a>
+							<a href="contacts.html">Контакты</a>
+						</nav>
+
+						<div class="phone_wrapper col-md-3">
+
+							<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+
+							<ul class="phones">
+								<li>(097) 823 32 39</li>
+								<li>(097) 823 32 39</li>
+							</ul>
+
+						</div>
+
+						<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
+
+							<input type="button" href=".form_wrapper_pop" class="btn_cta" value="Заказать консультацию">
+
+						</div>
+
+					</div>
+				</header>
+
+			</div>
+
+			<div class="content_pp_wrapper container">
+
+				<div class="slick-slider pp_image_block col-md-6">
+
+					<img src="../img/gallery/g_big.jpg" alt="" class="pp_image_big"/>
+					<img src="../img/gallery/g_small_1.jpg" alt="" class="pp_image_big"/>
+					<img src="../img/gallery/g_small_3.jpg" alt="" class="pp_image_big"/>
+
+				</div>
+
+				<div class="col-md-6 info_wrapper">
+
+					<div class="col-md-6 info">
+
+						<div class="head_content_wrapper_pp">
+
+							<h1 class="header_product_title">Двери 1</h1>
+
+							<p class="price_pp">
+								Сосна - от 4000 грн./1 шт<br>Ясень - от 6000 грн./1 шт
+							</p>
+
+						</div>
+
+						<input type="button" href=".form_wrapper_pop" class="btn_cta_content" value="Заказать консультацию">
+
+						<p class="disc">
+							В цену входит:<br>
+						- Дверное полотно<br>
+						- Коробка до 100мм<br>
+						- Наличники на две стороны<br>
+						- Покрытие тонировки в любой выбранной цвета, грунтовка + лак<br>
+
+						Отдельно оплачивается:<br>
+						- Доставка: от 1000 грн. *<br>
+						- Установка: 10% от стоимости заказа<br>
+						- Стекло, фурнитура на выбор заказчика<br>
+
+						Срок изготовления:<br>
+						- Одна дверь:<br>
+						от 10до 20 рабочих дней<br>
+						- Комплект на квартиру (5-7 дверей):<br>
+						от 30 рабочих дней<br>
+
+						Характеристика:<br>
+						Дверной блок изготавливается из 100% массива натурального дерева.<br>
+						Заказчик может выбрать породу дерева (ясен, сосна), любую форму филенок  и их оформление (под обклад или без), любую тонировку и покраску. Возможно оформить двери различным карнизом, порталами и елементами декора.
+						</p>
+					</div>
+
+					<div class="col-md-5 col-md-offset-1 side_features_wrapper">
+						<div class="side_features">
+
+							<div class="feature_item">
+								<img src="../img/ic_delivery.svg" alt="" />
+								<p>Доставка и монтаж изделия</p>
+							</div>
+
+							<div class="feature_item">
+								<img src="../img/ic_old_phone.svg" alt="" />
+								<p>Бесплатные консультации</p>
+							</div>
+
+							<div class="feature_item">
+								<img src="../img/ic_guarantee.svg" alt="" />
+								<p>Гарантия 5 лет</p>
+							</div>
+
+							<div class="feature_item">
+								<img src="../img/ic_wood.svg" alt="" />
+								<p>Только натуральное дерево</p>
+							</div>
+
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="you_also_like_wrapper">
+
+				<h3>Вам также может понравится</h3>
+
+				<section class="catalog_gallery">
+
+					<div class="g_img_wrapper">
+						<a href="product_page.html">
+							<img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
+						</a>
+						<div class="g_title">Двери 1</div>
+					</div>
+
+					<div class="g_img_wrapper">
+						<a href="product_page.html">
+							<img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
+						</a>
+						<div class="g_title">Двери 1</div>
+					</div>
+
+					<div class="g_img_wrapper">
+						<a href="product_page.html">
+							<img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+						</a>
+						<div class="g_title">Двери 1</div>
+					</div>
+
+				</section>
+
+
+
+			</div>
+
+			<footer>
+
+				<div class="foo_top container">
+
+					<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
+						<a href="#" class="logo_black">
 						</a>
 					</div>
 
-					<!-- mob menu -->
-					<div class="mob_menu_button_wrapper">
-						<a href="#" class="mob_menu_button">Меню</a>
-					</div>
-
-					<a href="#" class="close_icon">
-						<img src="../img/ic_close.svg" alt=""/>
-					</a>
-					<!-- mob menu end -->
-
-					<nav class="head_nav col-sm-4 col-md-3">
+					<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
 						<a href="index.html">Главная</a>
 						<a href="catalog.html">Каталог</a>
 						<a href="prices.html">Цены</a>
@@ -96,218 +250,67 @@
 						<a href="contacts.html">Контакты</a>
 					</nav>
 
-					<div class="phone_wrapper col-md-3">
+					<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
 
-						<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+						<div class="social_icons">
 
-						<ul class="phones">
-							<li>(097) 823 32 39</li>
-							<li>(097) 823 32 39</li>
-						</ul>
+							<a href="https://vk.com/">
+								<img src="../img/ic_vk.svg" class="ic_vk">
+							</a>
 
-					</div>
+							<a href="https://facebook.com">
+								<img src="../img/ic_fb.svg" class="ic_fb">
+							</a>
 
-					<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
-
-						<input type="button" href=".form_wrapper_pop" class="btn_cta" value="Заказать консультацию">
+						</div>
 
 					</div>
 
 				</div>
-			</header>
+
+				<div class="foo_bottom container">
+
+					<div class="rights col-xs-12 col-sm-4 col-md-4">
+						<p>© 2016 Woodoors<br>
+								Все права защищены<br>
+								Создание и поддержка Ilya Zoria Studio</p>
+					</div>
+
+					<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
+
+						<div class="location">
+
+							<img src="../img/ic_location.svg" class="ic_location">
+							<p>
+								Наш адрес:<br>
+								Украина, г.Тараща,<br>
+								ул. Степовая 15a
+							</p>
+
+						</div>
+
+					</div>
+
+					<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
+
+						<div class="bottom_phone">
+
+							<img src="../img/ic_cicle_phone_black.svg">
+							<ul class="phones">
+								<li>(097) 823 32 39</li>
+								<li>(097) 823 32 39</li>
+							</ul>
+
+						</div>
+					</div>
+
+				</div>
+
+			</footer>
 
 		</div>
-
-		<div class="content_pp_wrapper container">
-
-			<div class="slick-slider pp_image_block col-md-6">
-
-				<img src="../img/gallery/g_big.jpg" alt="" class="pp_image_big"/>
-				<img src="../img/gallery/g_small_1.jpg" alt="" class="pp_image_big"/>
-				<img src="../img/gallery/g_small_3.jpg" alt="" class="pp_image_big"/>
-
-			</div>
-
-			<div class="col-md-6 info_wrapper">
-
-				<div class="col-md-6 info">
-
-					<div class="head_content_wrapper_pp">
-
-						<h1 class="header_product_title">Двери 1</h1>
-
-						<p class="price_pp">
-							Сосна - от 4000 грн./1 шт<br>Ясень - от 6000 грн./1 шт
-						</p>
-
-					</div>
-
-					<input type="button" href=".form_wrapper_pop" class="btn_cta_content" value="Заказать консультацию">
-
-					<p class="disc">
-						В цену входит:<br>
-					- Дверное полотно<br>
-					- Коробка до 100мм<br>
-					- Наличники на две стороны<br>
-					- Покрытие тонировки в любой выбранной цвета, грунтовка + лак<br>
-
-					Отдельно оплачивается:<br>
-					- Доставка: от 1000 грн. *<br>
-					- Установка: 10% от стоимости заказа<br>
-					- Стекло, фурнитура на выбор заказчика<br>
-
-					Срок изготовления:<br>
-					- Одна дверь:<br>
-					от 10до 20 рабочих дней<br>
-					- Комплект на квартиру (5-7 дверей):<br>
-					от 30 рабочих дней<br>
-
-					Характеристика:<br>
-					Дверной блок изготавливается из 100% массива натурального дерева.<br>
-					Заказчик может выбрать породу дерева (ясен, сосна), любую форму филенок  и их оформление (под обклад или без), любую тонировку и покраску. Возможно оформить двери различным карнизом, порталами и елементами декора.
-					</p>
-				</div>
-
-				<div class="col-md-5 col-md-offset-1 side_features_wrapper">
-					<div class="side_features">
-
-						<div class="feature_item">
-							<img src="../img/ic_delivery.svg" alt="" />
-							<p>Доставка и монтаж изделия</p>
-						</div>
-
-						<div class="feature_item">
-							<img src="../img/ic_old_phone.svg" alt="" />
-							<p>Бесплатные консультации</p>
-						</div>
-
-						<div class="feature_item">
-							<img src="../img/ic_guarantee.svg" alt="" />
-							<p>Гарантия 5 лет</p>
-						</div>
-
-						<div class="feature_item">
-							<img src="../img/ic_wood.svg" alt="" />
-							<p>Только натуральное дерево</p>
-						</div>
-
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="you_also_like_wrapper">
-
-			<h3>Вам также может понравится</h3>
-
-			<section class="catalog_gallery">
-
-				<div class="g_img_wrapper">
-					<a href="product_page.html">
-						<img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
-					</a>
-					<div class="g_title">Двери 1</div>
-				</div>
-
-				<div class="g_img_wrapper">
-					<a href="product_page.html">
-						<img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
-					</a>
-					<div class="g_title">Двери 1</div>
-				</div>
-
-				<div class="g_img_wrapper">
-					<a href="product_page.html">
-						<img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-					</a>
-					<div class="g_title">Двери 1</div>
-				</div>
-
-			</section>
-
-
-
-		</div>
-
-		<footer>
-
-			<div class="foo_top container">
-
-				<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
-					<a href="#" class="logo_black">
-					</a>
-				</div>
-
-				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-					<a href="index.html">Главная</a>
-					<a href="catalog.html">Каталог</a>
-					<a href="prices.html">Цены</a>
-					<a href="articles.html">Статьи</a>
-					<a href="contacts.html">Контакты</a>
-				</nav>
-
-				<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
-
-					<div class="social_icons">
-
-						<a href="https://vk.com/">
-							<img src="../img/ic_vk.svg" class="ic_vk">
-						</a>
-
-						<a href="https://facebook.com">
-							<img src="../img/ic_fb.svg" class="ic_fb">
-						</a>
-
-					</div>
-
-				</div>
-
-			</div>
-
-			<div class="foo_bottom container">
-
-				<div class="rights col-xs-12 col-sm-4 col-md-4">
-					<p>© 2016 Woodoors<br>
-							Все права защищены<br>
-							Создание и поддержка Ilya Zoria Studio</p>
-				</div>
-
-				<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
-
-					<div class="location">
-
-						<img src="../img/ic_location.svg" class="ic_location">
-						<p>
-							Наш адрес:<br>
-							Украина, г.Тараща,<br>
-							ул. Степовая 15a
-						</p>
-
-					</div>
-
-				</div>
-
-				<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
-
-					<div class="bottom_phone">
-
-						<img src="../img/ic_cicle_phone_black.svg">
-						<ul class="phones">
-							<li>(097) 823 32 39</li>
-							<li>(097) 823 32 39</li>
-						</ul>
-
-					</div>
-				</div>
-
-			</div>
-
-		</footer>
 
 	</div>
-
 	<script>var scr = {"scripts":[
 		{"src" : "js/libs.min.js", "async" : false},
 		{"src" : "js/common.js", "async" : false},
