--- a/app/product_page.html
+++ b/app/product_page.html
@@ -204,7 +204,7 @@
 
 				<h3>Вам также может понравится</h3>
 
-				<section class="catalog_gallery">
+				<section class="you_also_like_products">
 
 					<div class="g_img_wrapper">
 						<a href="product_page.html">
