--- a/app/product_page.html
+++ b/app/product_page.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 
-		<div class="body_wrapper scene_element scene_element--fadein">
+		<div class="scene_element scene_element--fadein">
 
 			<div class="head_wrapper_pp">
 
@@ -190,7 +190,7 @@
 
 				<h3>Вам также может понравится</h3>
 
-				<section class="catalog_gallery">
+				<section class="you_also_like_products">
 
 					<div class="g_img_wrapper">
 						<a href="product_page.html">
