added big numbers

--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,7 @@
 				<img src="../img/ic_mouse.svg" class="scroll_mouse">
 
 			</div>
+
 			<div class="our_profile">
 				<div class="container">
 					<div class="row">
@@ -188,6 +189,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="how_we_work">
 				<div class="container">
 					<div class="row">
@@ -195,6 +197,10 @@
 							<h1 col-md-12>Как мы работаем</h1>
 							<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 								<div class="item_vertical">
+
+									<div class="big_number_wrapper">
+										<span class="big_number">1</span>
+									</div>
 
 										<div class="img_wrapper">
 											<img src="../img/ic_old_phone.svg" class="img_lp">
@@ -211,6 +217,10 @@
 							<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 								<div class="item_vertical">
 
+									<div class="big_number_wrapper">
+										<span class="big_number">2</span>
+									</div>
+
 									<div class="img_wrapper">
 										<img src="../img/ic_measure.svg" class="img_lp">
 									</div>
@@ -226,6 +236,10 @@
 							<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 								<div class="item_vertical">
 
+									<div class="big_number_wrapper">
+										<span class="big_number">3</span>
+									</div>
+
 									<div class="img_wrapper">
 										<img src="../img/ic_manufacture.svg" class="img_lp">
 									</div>
@@ -240,6 +254,10 @@
 							</div>
 							<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 								<div class="item_vertical">
+
+									<div class="big_number_wrapper">
+										<span class="big_number">4</span>
+									</div>
 
 									<div class="img_wrapper">
 										<img src="../img/ic_delivery.svg" class="img_lp">
